--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.password = blazej11
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=jank92926@gmail.com
-spring.mail.password=jankojaneczko
+spring.mail.username=blazej.olesiak@gmail.com
+spring.mail.password=blazej11
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
